--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/web-link": "^3.4",
         "symfony/web-server-bundle": "^3.4",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "tamtamchik/simple-flash": "^1.2"
     },
     "require-dev": {
         "symfony/dotenv": "^3.4",
